--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Terminator"
         tools:targetApi="31">
         <activity
-            android:name=".SecondActivity"
+            android:name=".ScheduleActivity"
             android:label = "Weekly Schedule"
             android:parentActivityName=".MainActivity">
             <meta-data
