--- a/build.gradle
+++ b/build.gradle
@@ -3,3 +3,9 @@ plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
 }
+
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
+    }
+}
